--- a/package.json
+++ b/package.json
@@ -51,5 +51,6 @@
     "tslint": "^5.12.0",
     "tslint-config-prettier": "^1.17.0",
     "tslint-react": "^3.6.0"
-  }
+  },
+  "homepage" : "http://slikts.github.io/react-graphql-example"
 }
