--- a/package.json
+++ b/package.json
@@ -10,12 +10,16 @@
     "@types/node": "^10.12.15",
     "@types/react": "^16.7.17",
     "@types/react-dom": "^16.0.11",
+    "apollo-cache-inmemory": "^1.3.12",
+    "apollo-client": "^2.4.8",
     "apollo-link": "^1.2.6",
     "apollo-link-rest": "^0.7.0",
+    "apollo-link-state": "^0.4.2",
     "enzyme": "^3.8.0",
     "enzyme-adapter-react-16": "^1.7.1",
     "graphql": "^14.0.2",
     "graphql-anywhere": "^4.1.23",
+    "graphql-tag": "^2.10.0",
     "graphql-tools": "^4.0.3",
     "react": "^16.6.3",
     "react-apollo": "^2.3.3",
