--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "apollo-link": "^1.2.6",
     "apollo-link-rest": "^0.7.0",
     "apollo-link-state": "^0.4.2",
+    "date-fns": "^1.30.1",
     "enzyme": "^3.8.0",
     "enzyme-adapter-react-16": "^1.7.1",
     "graphql": "^14.0.2",
